fix: use vertical image on smaller screens

--- a/frikndau-preview/assets/css/overrides.css
+++ b/frikndau-preview/assets/css/overrides.css
@@ -105,6 +105,12 @@ h3{
   background-color: initial;
 }
 
+@media (max-width: 768px) {
+  #hero{
+    background-image: url("../img/fnd2025-bg-vertical.jpg");
+  }
+}
+
 #hero:before {
   background: initial;
 }
